# MuoTHGEM

./: CMakeLists.txt  G4  Garf  THGem.cc  THGemAnalysis.cc  THGemAnalysis.cc~  ar_70_co2_30.gas  exampleGarfield.cc  lAr70c2h6.gas
include/: GarfieldAnalysis.hh  GarfieldDetectorConstruction.hh  GarfieldPhysics.hh
src/: GarfieldDetectorConstruction.cc  GarfieldG4FastSimulationModel.cc  GarfieldPhysics.cc  GarfieldPhysicsList.cc  GarfieldPrimaryGeneratorAction.cc
testrun/: CMakeCache.txt  G4History.macro  Makefile  cmake_install.cmake  exampleGeant4Interface  run.mac
vthgem10keV/: CMakeCache.txt  MPLIST.lis  Makefile  PRNSOL.lis  anlaysis  cmake_install.cmake  gain.txt  muon.txt  performance  resolution.txt  result_hists.root  result_pos_hists.root
vthgem10keV/results/: CMakeCache.txt  Makefile  anlaysis  cmake_install.cmake  gain.txt  muon.txt  resolution.txt  result_hists.root  result_pos_hists.root
vthgem11keV/: CMakeCache.txt  ELIST.lis  Makefile  NLIST.lis  PRNSOL.lis  cmake_install.cmake  gain.txt  muon.txt  resolution.txt
